gts-macros/tests/compile_fail/gts_error_tuple_struct.stderr
error: gts_error: Tuple structs are not supported. Use a struct with named fields.
 --> tests/compile_fail/gts_error_tuple_struct.rs:8:12
  |
8 | pub struct TupleStructError(String, u32);
  |            ^^^^^^^^^^^^^^^^
